--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ferm (2.4-2) UNRELEASED; urgency=medium
+
+  * Use secure URI in Vcs control header.
+
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 14 Sep 2018 01:07:33 +0100
+
 ferm (2.4-1) unstable; urgency=medium
 
   * [2bd37ee] New upstream version 2.4
