--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ferm (2.4-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
   * Depend on newer debhelper (>= 9.20160709) rather than dh-systemd.
+  * Upgrade to newer source format.
 
  -- Debian Janitor <janitor@jelmer.uk>  Thu, 10 Oct 2019 09:26:57 +0000
 
