--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ ferm (2.4-2) UNRELEASED; urgency=medium
   * Trim trailing whitespace.
   * Depend on newer debhelper (>= 9.20160709) rather than dh-systemd.
   * Upgrade to newer source format.
+  * Bump debhelper from old 9 to 12.
 
  -- Debian Janitor <janitor@jelmer.uk>  Thu, 10 Oct 2019 09:26:57 +0000
 
